--- a/Interface/src/sample/sample.fxml
+++ b/Interface/src/sample/sample.fxml
@@ -39,7 +39,8 @@
         </columns>
       </TableView>
       <TextArea layoutX="300.0" layoutY="27.0" prefHeight="373.0" prefWidth="308.0" />
-      <ChoiceBox layoutX="76.0" layoutY="262.0" prefWidth="150.0" />
-      <Button layoutX="125.0" layoutY="315.0" mnemonicParsing="false" text="Ordenar" />
+      <ChoiceBox layoutX="76.0" layoutY="242.0" prefWidth="150.0" />
+      <Button layoutX="121.0" layoutY="287.0" mnemonicParsing="false" text="Ordenar" />
+      <ProgressIndicator layoutX="121.0" layoutY="329.0" prefHeight="57.0" prefWidth="60.0" progress="0.0" />
    </children>
 </AnchorPane>
