--- a/Interface/src/Core/sample.fxml
+++ b/Interface/src/Core/sample.fxml
@@ -8,13 +8,13 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="605.0" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="605.0" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Core.Controller">
    <children>
       <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="605.0">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-              <MenuItem mnemonicParsing="false" text="Open" />
+              <MenuItem fx:id="openOption" mnemonicParsing="false" text="Open" />
                   <MenuItem mnemonicParsing="false" text="Close" />
             </items>
           </Menu>
@@ -30,17 +30,17 @@
           </Menu>
         </menus>
       </MenuBar>
-      <TableView layoutY="27.0" prefHeight="200.0" prefWidth="302.0">
+      <TableView fx:id="table" layoutY="27.0" prefHeight="200.0" prefWidth="302.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="Metodo 1" />
-          <TableColumn prefWidth="75.0" text="Metodo 2" />
-            <TableColumn prefWidth="75.0" text="Metodo 3" />
-            <TableColumn prefWidth="75.0" text="Metodo 4" />
+          <TableColumn fx:id="stColumn" prefWidth="75.0" text="Metodo 1" />
+          <TableColumn fx:id="ndColumn" prefWidth="75.0" text="Metodo 2" />
+            <TableColumn fx:id="ThirdthColumn" prefWidth="75.0" text="Metodo 3" />
+            <TableColumn fx:id="FourthColumn" prefWidth="75.0" text="Metodo 4" />
         </columns>
       </TableView>
-      <TextArea layoutX="300.0" layoutY="27.0" prefHeight="373.0" prefWidth="308.0" />
-      <ChoiceBox layoutX="76.0" layoutY="242.0" prefWidth="150.0" />
+      <TextArea fx:id="textArea" layoutX="300.0" layoutY="27.0" prefHeight="373.0" prefWidth="308.0" />
+      <ChoiceBox fx:id="choiceSort" layoutX="76.0" layoutY="242.0" prefWidth="150.0" />
       <Button layoutX="121.0" layoutY="287.0" mnemonicParsing="false" text="Ordenar" />
-      <ProgressIndicator layoutX="121.0" layoutY="329.0" prefHeight="57.0" prefWidth="60.0" progress="0.0" />
+      <ProgressIndicator fx:id="progressIn" layoutX="121.0" layoutY="329.0" prefHeight="57.0" prefWidth="60.0" progress="0.0" />
    </children>
 </AnchorPane>
